fix the spacing input

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ footer {
 
     .input-task {
         padding: 0;
+        margin: 0 8px;
         font-size: 1.2rem;
     }
 
